2006-02-08 Perry
 PATCH: [ 1424867 ] Fix common prefix code for \r\n
  Src\diffutils\src: IO.C

2006-02-07 Perry
 Current selftests status: Failure count: 0 (of 588)

2006-02-07 Kimmo
 PATCH: [ 1424535 ] Czech Translation, Submitted by Jan Hryz
  Fix dir compare report dialog layout
  Src: Merge.rc
  Src/Languages/*: Merge*.rc

2006-02-06 Perry
 Synchronizing Slovak translation to English where feasible.
  Src/Languages/Slovak: MergeSlovak.rc
 Synchronizing Swedish translation to English where feasible.
  Src/Languages/Swedish: MergeSwedish.rc
 PATCH: [ 1392413 ] Track lossy encodings & warn user
  Src: FileFilterMgr.cpp Merge.rc MergeDoc.cpp files.h resource.h
  Src/Common: UniFile.cpp UniFile.h unicoder.cpp
 PATCH: [ 1392413 ] Track lossy encodings & warn user
  Src/Languages/*: Merge*.rc

2006-02-05 Perry
 PATCH: [ 1414201 ] Cleanup Merge Line Flags
  Src: LocationView.cpp Merge.dsp MergeDiffDetailView.cpp MergeDoc.cpp
   MergeEditView.cpp MergeEditView.h 
  NEW Src: MergeLineFlags.h

2006-02-05 Kimmo
 PATCH: [ 1424264 ] Use 'Item' instead of file in View-menu
  Src: Merge.rc
  Src/Language: */Merge*.rc

2006-02-05 Perry
 Fix Italian Edit/Options/Editor line selection controls.
  Src/Languages/Italian/MergeItalian.rc
 PATCH: [ 1414904 ] updated italian translation for winmerge 2.5.3.1
  Submitted by A. Decorte
  New updates for selecting current diffs and wrap lines.
  Src/Languages/Italian/MergeItalian.rc

2006-02-05 Kimmo
 BUG: [ 1422257 ] Wrong text in tooltip
  (Dutch translation had wrong shortcut keys in tooltip)
  Src/Languages/Dutch/MergeDutch.rc
 PATCH: [ 1424535 ] Czech Translation
  Submitted by Jan Hryz
  Src/Languages/Czech/MergeCzech.rc

2006-02-04 Perry
 PATCH: [ 1424142 ] Wrap two lwdisp macros in ifndef
  Src/Common: lwdisp.h
 Undo PATCH: [ 1424142 ] Wrap two lwdisp macros in ifndef
  Src/Common: lwdisp.h
 BUG: [ 1383052 ] warning C4005: 'COMPILE_MULTIMON_STUBS' : macro redefinition
  (Wrap multimon def with ifndef
  Src: MainFrm.cpp